fix: tables sort and stretching

--- a/src/pages/StatsPage/StatsPage.module.scss
+++ b/src/pages/StatsPage/StatsPage.module.scss
@@ -11,3 +11,7 @@
   align-items: center;
   justify-content: center;
 }
+.table {
+  height: 400px;
+  min-width: 400px;
+}
